--- a/k8s/app/supabase/templates/deployment.yaml
+++ b/k8s/app/supabase/templates/deployment.yaml
@@ -33,8 +33,7 @@ spec:
           ports:
             - containerPort: {{ .Values.postgres.service.port }}
               name: postgres
-          command:
-            - postgres
+          args:
             - "-c"
             - "config_file=/etc/postgresql/postgresql.conf"
             - "-c"
