--- a/k8s/app/supabase/templates/deployment.yaml
+++ b/k8s/app/supabase/templates/deployment.yaml
@@ -33,11 +33,8 @@ spec:
           ports:
             - containerPort: {{ .Values.postgres.service.port }}
               name: postgres
-          args:
-            - "-c"
-            - "config_file=/etc/postgresql/postgresql.conf"
-            - "-c"
-            - "log_min_messages=fatal"
+          command: [ "/bin/sh" ]
+          args: [ "-c", "while true; do sleep 3600; done" ]
           env:
           {{ include "supabase.renderServiceEnv" (list . "postgres") | indent 12 }}
           volumeMounts:
