--- a/k8s/app/supabase/templates/service.yaml
+++ b/k8s/app/supabase/templates/service.yaml
@@ -12,7 +12,7 @@ spec:
     - port: {{ .Values.postgres.service.port }}
       targetPort: {{ .Values.postgres.service.port }}
       protocol: TCP
-      name: tcp
+      name: postgres
   selector:
     app.kubernetes.io/name: supabase
     app.kubernetes.io/instance: {{ .Release.Name }}
